# ramify

./: Cargo.toml  README.md  example_trees.txt  layout_docs.txt  notes.txt  todo.txt
examples/: README.md  basic.rs  cascade.rs  fallible.rs  inverted.rs
src/: config.rs  layout.rs  lib.rs  writer.rs
src/layout/: columns.rs  ops.rs  tests.rs
src/layout/ops/: tests.rs
src/layout/tests/: branch_macro.rs  config.rs  fallible.rs  multiline.rs  reverse.rs  single.rs
src/writer/: branch.rs  doctest_end.txt  doctest_init.txt
