[package]
name = "ramify"
description = "Generate annotated branch diagrams from heirarchical data"
readme = "README.md"
version = "0.1.0"
edition = "2024"
authors = ["Alex Rutar <alex@rutar.org>"]
keywords = ["tree", "streaming", "branch", "line art"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/autobib/ramify"
categories = ["visualization"]
