[package]
name = "ramify"
description = "Generate annotated branch diagrams from hierarchical data"
readme = "README.md"
version = "0.1.2"
edition = "2024"
authors = ["Alex Rutar <alex@rutar.org>"]
keywords = ["tree", "streaming", "branch"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alexrutar/ramify"
categories = ["visualization"]

[dev-dependencies]
arrayvec = "0.7.6"
rand = "0.9.2"
rand_distr = "0.5.1"

[[example]]
name = "basic"

[[example]]
name = "cascade"

[[example]]
name = "inverted"

[[example]]
name = "fallible"
